# isBattery

./: .gitignore  CHANGELOG.md  Cargo.toml  DESIGN.md  GITHUB_RELEASE_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  POWER_MONITORING.md  README.md  build.bat  run_dev.bat  tauri.conf.json
--name/src-tauri/: tauri.conf.json
.github/workflows/: build.yml
assets/icons/: README.md
src/: main.rs
src/audio/: mod.rs  player.rs
src/config/: manager.rs  mod.rs  storage.rs
src/power/: detector.rs  mod.rs  monitor.rs
src/ui/: alert.rs  mod.rs  settings.rs  tray.rs
src/utils/: logger.rs  mod.rs  startup.rs
